--- a/service-feign/src/main/resources/application-dev.yml
+++ b/service-feign/src/main/resources/application-dev.yml
@@ -6,9 +6,4 @@ spring.application.name=servicer-feign
 eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka/
 #打开feign自带的断路器
 feign.hystrix.enabled=true
-#对应前配置文件中的{application}部分
-spring.application.name=common
-#对应前配置文件中的{profile}部分
-spring.cloud.config.profile=prod
-#对应前配置文件的git分支
-spring.cloud.config.label=master
+common_service_config = common_prod_master
